engine/crates/engine-v2/query-solver/src/tests/snapshots/engine_v2_query_solver__tests__cycle__query_partitions_cycle-solved.snap
---
source: engine/crates/engine-v2/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"third\", color=forestgreen ]\n    2 [ label = \"first\", color=forestgreen ]\n    3 [ label = \"second\", color=forestgreen ]\n    4 [ label = \"Root#C\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    5 [ label = \"partitionsCycle#C\", shape=box, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"FedEntity#B\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"second#B\", shape=box, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"FedEntity#A\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"first#A\", shape=box, color=dodgerblue, color=forestgreen ]\n    10 [ label = \"third#A\", shape=box, color=dodgerblue, color=forestgreen ]\n    11 [ label = \"*id\", color=forestgreen ]\n    12 [ label = \"id#C\", shape=box, color=dodgerblue, color=forestgreen ]\n    13 [ label=\"\", style=dashed]\n    0 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 6 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 9 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 10 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 12 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    12 -> 11 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    13 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "third", steiner=1 ]
    2 [ label = "first", steiner=1 ]
    3 [ label = "second", steiner=1 ]
    4 [ label = "Root#C", steiner=1 ]
    5 [ label = "partitionsCycle#C", steiner=1 ]
    6 [ label = "FedEntity#B", steiner=1 ]
    7 [ label = "second#B", steiner=1 ]
    8 [ label = "FedEntity#A", steiner=1 ]
    9 [ label = "first#A", steiner=1 ]
    10 [ label = "third#A", steiner=1 ]
    11 [ label = "*id", steiner=1 ]
    12 [ label = "id#C", steiner=1 ]
    13 [ label="", style=dashed]
    0 -> 4 [ cost=0, steiner=1]
    4 -> 5 [ cost=0, steiner=1]
    5 -> 6 [ cost=0, steiner=1]
    6 -> 7 [ cost=0, steiner=1]
    7 -> 3 [ cost=0, steiner=1]
    5 -> 8 [ cost=0, steiner=1]
    8 -> 9 [ cost=0, steiner=1]
    9 -> 2 [ cost=0, steiner=1]
    8 -> 10 [ cost=0, steiner=1]
    10 -> 1 [ cost=0, steiner=1]
    5 -> 12 [ cost=0, steiner=1]
    12 -> 11 [ cost=0, steiner=1]
    13 -> 0 [ cost=0, steiner=0]
}
